samples/_failures_safe/1761363593_7d11a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f15eb82e.c: In function ‘main’:
./samples/SAFE/__tmp_f15eb82e.c:155:5: error: expected expression at end of input
  155 |     for (
      |     ^~~
./samples/SAFE/__tmp_f15eb82e.c:155:5: error: expected declaration or statement at end of input
